tests/invalid/generic_type_alias_argument_count_mismatch.wio
type Ordered<K, V> = Tree<K, V>;

fn Entry() -> i32 {
    let values: Ordered<i32> = {< 1: 2 >};
    return 0;
}
